--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,27 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Add to Shaarli",
   "description": "This extension lets you add the current tab or a note to your Shaarli instance.",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "icons": {
     "16": "icon16.png",
     "48": "icon48.png",
     "128": "icon128.png"
   },
-  "browser_action": {
+  "action": {
     "default_icon": "icon.png"
   },
-
   "options_page": "options.html",
-  "options_ui": {
-    "page": "options.html",
-    "open_in_tab": false
-  },
   "background": {
-    "scripts": [
-      "background.js"
-    ],
-    "persistent": false
+    "service_worker": "background.js"
   },
   "permissions": [
+    "storage",
     "activeTab",
-    "storage"
+    "scripting"
+  ],
+  "host_permissions": [
+    "<all_urls>"
   ],
   "commands": {
     "add-url": {
@@ -40,5 +36,8 @@
       },
       "description": "Add a note"
     }
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
   }
 }
